# Hector_Quadrotor_tests

./: .gitmodules  README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/darknet_ros/: darknet_ros
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_mapping/: hector_mapping
devel/lib/hector_pose_estimation/: pose_estimation
devel/lib/hector_quadrotor_actions/: landing_action  pose_action  takeoff_action
devel/lib/hector_quadrotor_pose_estimation/: hector_quadrotor_pose_estimation
devel/lib/hector_quadrotor_teleop/: quadrotor_teleop
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/message_to_tf/: message_to_tf
devel/lib/pidcontrol/: control_pid  pidcontrol  pidcontrolnode
devel/lib/pkgconfig/: darknet_ros.pc  darknet_ros_msgs.pc  follower.pc  hector_components_description.pc  hector_compressed_map_transport.pc  hector_gazebo_plugins.pc  hector_gazebo_thermal_camera.pc  hector_gazebo_worlds.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_pose_estimation.pc  hector_pose_estimation_core.pc  hector_quadrotor_actions.pc  hector_quadrotor_controller_gazebo.pc  (+16 more)
src/: .rosinstall
src/pidcontrol/: CMakeLists.txt
src/pidcontrol/include/pidcontrol/: controler.h
src/pidcontrol/src/: controler.cpp  controller_node.cpp
(+48 files in other folders)
